--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="textView_1">This is my TextView!</string>
     <string name="editText_1">This my EditText!</string>
     <string name="button_1">Push</string>
-    <string name="togglebutton_1">Press</string>
     <string name="switch_1">Turn me one</string>
     <string name="checkbox_1">Check me one</string>
+    <string name="about_title_1">This is SecondActivity</string>
+    <string name="about_title_2">This is CalendarActivity</string>
 </resources>
